--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dev.finance$</title>
+
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=wap">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </head>
 
@@ -54,9 +59,8 @@
             <table id="data-table">
                 <thead>
                     <tr>
-                        <th>Descrição</th>
+                        <th>Data - Descrição</th>
                         <th>Valor</th>
-                        <th>Data</th>
                         <th></th>
                     </tr>
                 </thead>
