Leia me e icons.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
         rel="stylesheet">
 
+        <meta itemProp="name" content="dev.finance$ - Rocketseat" />
+        <meta itemProp="description" content="Orgulhosamente criado durante a Maratona Discover da Rocketseat." />
+        <meta itemProp="image" content="https://robsonamendonca.github.io/maratonadiscover.rocketseat/assets/total.png" />
+
+        
+        <meta name="twitter:card" content="Maratona Discover da Rocketseat" />
+        <meta name="twitter:site" content="https://robsonamendonca.github.io/maratonadiscover.rocketseat/" />
+        <meta name="twitter:title" content="dev.finance$ - Rocketseat" />
+        <meta name="twitter:description" content="Orgulhosamente criado durante a Maratona Discover da Rocketseat." />
+        <meta name="twitter:creator" content="@robsonamendonca" />
+        <meta name="twitter:image" content="https://robsonamendonca.github.io/maratonadiscover.rocketseat/assets/total.png" />
+
+        
+        <meta property="og:title" content="dev.finance$ - Rocketseat" />
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="https://robsonamendonca.github.io/maratonadiscover.rocketseat/" />
+        <meta property="og:image" content="https://robsonamendonca.github.io/maratonadiscover.rocketseat/assets/total.png" />
+        <meta property="og:description" content="Orgulhosamente criado durante a Maratona Discover da Rocketseat." />
+        <meta property="og:site_name" content="dev.finance$ - Rocketseat" />
 
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
